deployment-examples/kubernetes/microk8s/ejbca-ce-with-ingress-and-mariadb.yaml
#
# Clean up with:
#   kubectl delete namespaces pki-demo
#
apiVersion: v1
kind: Namespace
metadata:
  name: pki-demo
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ejbca-ingress
  namespace: pki-demo
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # Managing the instance with a client TLS certificate will require additional configuration
    #nginx.ingress.kubernetes.io/auth-tls-verify-client: "optional"
    #nginx.ingress.kubernetes.io/auth-tls-secret: "default/ca-secret"
    #nginx.ingress.kubernetes.io/auth-tls-verify-depth: "3"
    #nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
    # AJP is available in nginx-ingress-controller:0.18.0 and later
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
    nginx.ingress.kubernetes.io/session-cookie-expires: "1800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "1800"
spec:
  tls:
    - hosts:
      - pki.primekey.example
  rules:
  # Ensure that this hostname is resolvable for example in /etc/hosts if you are doing local testing
  - host: pki.primekey.example
    http:
      paths:
      - path: /ejbca
        backend:
          serviceName: ejbca-backend-service
          servicePort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: ejbca-backend-service
  namespace: pki-demo
  labels:
    app: ejbca
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8082
    targetPort: 8082
  selector:
    app: ejbca
---
apiVersion: v1
kind: Service
metadata:
  name: ejbca-database-service
  namespace: pki-demo
  labels:
    app: database
spec:
  type: ClusterIP
  ports:
  - name: database-port
    port: 3306
    targetPort: 3306
  selector:
    app: database
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ejbca-deployment
  namespace: pki-demo
  labels:
    app: ejbca
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ejbca
  template:
    metadata:
      labels:
        app: ejbca
    spec:
      containers:
      - name: ejbca
        image: primekey/ejbca-ce
        imagePullPolicy: Always
        resources:
          limits:
            cpu: "16"
            memory: "4096Mi"
          requests:
            cpu: 2000m
            memory: "1536Mi"
        ports:
        - containerPort: 8081
          name: proxied-http
        - containerPort: 8082
          name: proxied-https
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database-deployment
  namespace: pki-demo
  labels:
    app: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
      - name: mariadb
        image: library/mariadb:10.2
        ports:
        - containerPort: 3306
          name: mariadb
        volumeMounts:
        - name: config-mariadb-volume
          mountPath: /etc/mysql/config.d/
      volumes:
        - name: config-mariadb-volume
          configMap:
            name: config-mariadb-configmap
